basis for dark mode theming

--- a/src/components/SocialIcons.astro
+++ b/src/components/SocialIcons.astro
@@ -97,6 +97,6 @@ const getIcon = (iconName: keyof typeof Icon | 'LinkedIn') => {
     transform: translateX(-50%);
     border-width: 5px;
     border-style: solid;
-    border-color: rgb(42 38 30) transparent transparent transparent;
+    border-color: rgb(var(--color-ink-dark)) transparent transparent transparent;
   }
 </style>
