--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -78,7 +78,7 @@ const tabsContent: TabContent[] = [
 ---
 
 <TwoColumnLayout
-  layout_body_classes="bg-[url('/hero.png')] bg-cover"
+  layout_body_classes="bg-[var(--image-hero)] bg-cover"
   title="Karina Tovar - Product Designer"
   breadcrumbs={breadcrumbs}
   asideTitle={{
