--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -75,7 +75,7 @@ const { title, body_classes = '' } = Astro.props;
 
 		/* Images */
 		--image-hero: url('/hero.png');
-		--image-hero-dark: url('/hero-dark.png'); /* If you have a dark version */
+		--image-hero-dark: url('/hero-dark.png');
 	}
 
 		/* Dark theme colors (flipped) */
