--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,7 @@ import Button from '../components/Button.astro';
 import SocialIcons from '../components/SocialIcons.astro';
 import * as Icon from '@astropub/icons'
 import SpotifyHoverCard from '../components/SpotifyHoverCard.astro';
+import ButtonGroup from '../components/ButtonGroup.astro';
 
 const breadcrumbs = [
   { text: 'Karina Tovar', href: '/' }
@@ -102,17 +103,13 @@ const tabsContent: TabContent[] = [
     </div>
   </div>
   <section class="manifesto">
-    <div class="space-x-4 pt-2">
-      {tabsContent.map(tab => (
-        <Button 
-          type="textual-button"
-          additionalClasses={`for-${tab.id} ${tab.isDefault ? 'activate' : ''}`} 
-          data-section={tab.id}
-        >
-          {tab.buttonText}
-        </Button>
-      ))}
-    </div>
+    <ButtonGroup 
+      buttons={tabsContent.map(tab => ({
+        id: tab.id,
+        text: tab.buttonText,
+        isActive: tab.isDefault
+      }))}
+    />
     <div class="min-h-[132px]">
       {tabsContent.map(tab => (
         <h2 id={tab.id} class={`section-content ${!tab.isDefault ? 'hidden' : ''}`}>
