--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -107,7 +107,8 @@ const tabsContent: TabContent[] = [
       buttons={tabsContent.map(tab => ({
         id: tab.id,
         text: tab.buttonText,
-        isActive: tab.isDefault
+        isActive: tab.isDefault,
+        //confetti: true
       }))}
     />
     <div class="min-h-[132px]">
