--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -30,7 +30,7 @@ const { title, body_classes = '' } = Astro.props;
 		<ViewTransitions />
 	</head>
 	<body class={`relative min-h-screen ${body_classes}`}>
-		<AuraBackground />
+		<!--<AuraBackground /> -->
 		<LoadingBar />
 		<CoordinateGrid />
 		<div class="content relative z-10 w-full h-screen min-h-fit p-12">
