--- a/src/layouts/ThoughtLayout.astro
+++ b/src/layouts/ThoughtLayout.astro
@@ -132,7 +132,7 @@ const breadcrumbs = [
   }
 
   .showcase-image-wrapper {
-    @apply rounded-lg min-h-fit flex items-center justify-center border border-paper shadow-lg shadow-orange-300 opacity-0 bg-paper w-full delay-75;
+    @apply rounded-lg min-h-fit flex items-center justify-center border border-white shadow-lg shadow-orange-300 opacity-0 bg-white w-full delay-75;
     animation: showcase-slow 2s cubic-bezier(0.23, 1, 0.320, 1) forwards;
   }
   .showcase-image {
