--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -29,11 +29,11 @@ const { title, body_classes = '' } = Astro.props;
 		<title>{title}</title>
 		<ViewTransitions />
 	</head>
-	<body class={`relative min-h-screen ${body_classes}`}>
+	<body class={`relative ${body_classes}`}>
 		<!--<AuraBackground /> -->
 		<LoadingBar />
 		<CoordinateGrid />
-		<div class="content relative z-10 w-full h-screen min-h-fit p-12">
+		<div class="relative z-10">
 			<slot />
 		</div>
 	</body>
