--- a/src/layouts/ThoughtLayout.astro
+++ b/src/layouts/ThoughtLayout.astro
@@ -21,39 +21,41 @@ const breadcrumbs = [
 ---
 
 <Layout title={title}>
-  <article class="prose prose-lg thoughts-container">
-    <Breadcrumbs crumbs={breadcrumbs} />
-    <header class="thoughts-header">
-      <h1>{title}</h1>
-      <div class="date-container">
-        <Gem />
-        <time>{date}</time>
-      </div>
-      <div class="flex justify-center gap-2">
-        {categories.map((category: string) => (
-          <CategoryPill category={category} isActive={true} />
-        ))}
-      </div>
-    </header>
-
-    {showcase && (
-      <div class="showcase-image-wrapper relative">
-        <img
-          src={showcase}
-          alt={title}
-          class="showcase-image z-10"
-        />
-        <div class="absolute m-auto p-4 flex gap-1 items-center justify-center">
-          <Icon.Layers size="14" />
-          <span>Painting...</span>
+  <section class="w-full min-h-screen p-10">
+    <article class="prose prose-lg thoughts-container">
+      <Breadcrumbs crumbs={breadcrumbs} />
+      <header class="thoughts-header">
+        <h1>{title}</h1>
+        <div class="date-container">
+          <Gem />
+          <time>{date}</time>
         </div>
-      </div>
-    )}
+        <div class="flex justify-center gap-2">
+          {categories.map((category: string) => (
+            <CategoryPill category={category} isActive={true} />
+          ))}
+        </div>
+      </header>
 
-    <section class="thought-content animate-slide">
-      <slot />
-    </section>
-  </article>
+      {showcase && (
+        <div class="showcase-image-wrapper relative">
+          <img
+            src={showcase}
+            alt={title}
+            class="showcase-image z-10"
+          />
+          <div class="absolute m-auto p-4 flex gap-1 items-center justify-center">
+            <Icon.Layers size="14" />
+            <span>Painting...</span>
+          </div>
+        </div>
+      )}
+
+      <section class="thought-content animate-slide">
+        <slot />
+      </section>
+    </article>
+  </section>
 </Layout>
 
 
