--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -44,7 +44,7 @@
 
     /* Two Column Layout styles */
     .two-col-basis {
-      @apply h-full flex gap-20 mx-auto;
+      @apply min-h-screen flex gap-20 mx-auto overflow-hidden;
     }
 
     .two-col-left-column {
@@ -56,7 +56,7 @@
     }
 
     .two-col-right-column {
-      @apply flex-1 flex flex-col items-start justify-center gap-10 overflow-scroll relative my-auto z-10;
+      @apply flex-1 flex flex-col items-start justify-center gap-10 overflow-y-auto relative my-auto z-10 max-h-screen;
       -ms-overflow-style: none;
       scrollbar-width: none;
     }
