--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,5 +1,6 @@
 ---
 import DetailsLayout from '../layouts/DetailsLayout.astro';
+import ThoughtLayout from '../layouts/ThoughtLayout.astro';
 import SectionBlock from '../components/SectionBlock.astro';
 const breadcrumbs = [
   { text: 'Karina Tovar', href: '/' },
@@ -7,37 +8,42 @@ const breadcrumbs = [
 ];
 ---
 
+
 <DetailsLayout
   layout_body_classes="bg-[image:var(--image-hero)] bg-cover"
-  title="About Me"
+  title="Hello stranger"
   showcaseImage="/phone.png"
   showcaseImageClasses="max-h-[480px]"
   showcaseImageAlt="Old rotary phone seen from above, far away, in a blue calm serene background with desert tones like Dan Flavin. Styled after Tim Walker and James Bidgood."
   breadcrumbs={breadcrumbs}
   additionalClasses=""
-  asideTitle={{
-    line1: "Hello",
-    line2: "Stranger"
-  }}
-  subtitle="Published from Notion"
+  subtitle="About Me"
 >
-  <SectionBlock title="It All Started with a Phone">
+  <SectionBlock size="small">
+    <h2>It All Started with a Phone</h2>
     <p>I was in grad school in 2013 working on a project and became obsessed with rotary phones. The anatomy of these old phones is a work of art. People used to be wired to these machines. They would tilt their heads while holding the phone between their ear and their neck. It forced you to feel its weight. It forced you to feel the weight of having a conversation.</p>
     <p>There was something about that which obsessed me. The idea. No. The problem that we were losing our humanity to technology by always having to be live. Not knowing how to live.</p>
     <p>So I spent months testing people's interactions with public phones. Building prototypes for the inner workings between a Raspberry Pi and the Twillio API. All so I could make a phone bench that would ring my phone when people sat. All so I could talk to strangers. All so I could help make their day better.</p>
   </SectionBlock>
+
+  <SectionBlock size="large" classNames="p-10 bg-white text-carbon">
+    <p>THIS IS A TEST</p>
+  </SectionBlock>
   
-  <SectionBlock title="My Design Tenets">
+  <SectionBlock size="small">
+    <h2>My Design Tenets</h2>
     <p>At the end of the day helping products grow and become profitable is key to helping users be happy on their day to day and while interacting with your features. If your product sucks. No one will buy it.</p>
   </SectionBlock>
 
-  <SectionBlock title="It All Started with a Phone">
+  <SectionBlock size="small">
+    <h2>It All Started with a Phone</h2>
     <p>I was in grad school in 2013 working on a project and became obsessed with rotary phones. The anatomy of these old phones is a work of art. People used to be wired to these machines. They would tilt their heads while holding the phone between their ear and their neck. It forced you to feel its weight. It forced you to feel the weight of having a conversation.</p>
     <p>There was something about that which obsessed me. The idea. No. The problem that we were losing our humanity to technology by always having to be live. Not knowing how to live.</p>
     <p>So I spent months testing people's interactions with public phones. Building prototypes for the inner workings between a Raspberry Pi and the Twillio API. All so I could make a phone bench that would ring my phone when people sat. All so I could talk to strangers. All so I could help make their day better.</p>
   </SectionBlock>
   
-  <SectionBlock title="My Design Tenets">
+  <SectionBlock size="small">
+    <h2>My Design Tenets</h2>
     <p>At the end of the day helping products grow and become profitable is key to helping users be happy on their day to day and while interacting with your features. If your product sucks. No one will buy it.</p>
   </SectionBlock>
 </DetailsLayout>
