--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -79,15 +79,13 @@ const tabsContent: TabContent[] = [
 ---
 
 <TwoColumnLayout
-  layout_body_classes="bg-[image:var(--image-hero)] bg-cover"
+  layout_body_classes="bg-[url('/index-landscape.png')] bg-cover bg-center"
   title="Karina Tovar - Product Designer"
   breadcrumbs={breadcrumbs}
   asideTitle={{
     line1: "Product Designer",
     line2: "Pixel Philosopher"
   }}
-  bgImage="/kt.png"
-  bgImageClasses="mix-blend-overlay opacity-40"
 >
   <div slot="left-column-extra">
     <div class="flex items-center gap-4">
