--- a/src/components/BackButton.astro
+++ b/src/components/BackButton.astro
@@ -23,7 +23,7 @@ const { href, text, additionalClasses } = Astro.props;
     @apply flex items-center gap-2 text-paper w-fit -ml-1;
   }
   .button-circle {
-    @apply w-8 h-8 flex items-center justify-center rounded-full bg-inkLight overflow-hidden relative hover:shadow-lg;
+    @apply w-8 h-8 flex items-center justify-center rounded-full bg-brand overflow-hidden relative hover:shadow-lg;
   }
   .icon-arrow {
     @apply z-[1] group-hover:text-paper transition-colors delay-300
