--- a/src/pages/thoughts.astro
+++ b/src/pages/thoughts.astro
@@ -18,7 +18,7 @@ const initialCategory = Astro.url.searchParams.get('category') || 'all';
 ---
 
 <TwoColumnLayout
-  layout_body_classes="bg-[image:var(--image-hero)] bg-cover"
+  layout_body_classes="bg-[url('/landscape.png')] bg-cover bg-center"
   title="Karina Tovar - Product Designer"
   breadcrumbs={breadcrumbs}
   additionalClasses="[&>.right-column]:h-full"
