--- a/src/pages/work.astro
+++ b/src/pages/work.astro
@@ -22,7 +22,7 @@ const sortedYears = Object.keys(projectsByYear).sort((a, b) => parseInt(b) - par
 ---
 
 <TwoColumnLayout
-  layout_body_classes="bg-[image:var(--image-hero)] bg-cover"
+  layout_body_classes="bg-[url('/landscape.png')] bg-cover bg-center"
   title="Karina Tovar - My Work"
   breadcrumbs={breadcrumbs}
   asideTitle={{
