small structure planninh

--- a/src/layouts/ThoughtLayout.astro
+++ b/src/layouts/ThoughtLayout.astro
@@ -21,7 +21,7 @@ const breadcrumbs = [
 ---
 
 <Layout title={title}>
-  <section class="w-full min-h-screen p-10">
+  <section class="w-full min-h-screen p-10 flex flex-col relative">
     <article class="prose prose-lg thoughts-container">
       <Breadcrumbs crumbs={breadcrumbs} />
       <header class="thoughts-header">
@@ -55,6 +55,9 @@ const breadcrumbs = [
         <slot />
       </section>
     </article>
+  </section>
+  <section class="w-full h-20 bg-inkLighter fixed inset-0 mt-auto z-10">
+    test
   </section>
 </Layout>
 
